<resources>
    <string name="app_name">Android2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="george_a_romero">George A. Romero</string>
    <string name="godfather_of_the_dead">Godfather of the Dead</string>
    <string name="follow">follow</string>
    <string name="resentcode">Сообщение не пришло? <b> отправить заново</b> </string>
</resources>