<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.android2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.android2.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.android2.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.android2.ui.profile.ProfileFragment"
        android:label="profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.example.android2.ui.news.NewsFragment"
        android:label="news_fragment"
        tools:layout="@layout/news_fragment">
        <argument
            android:name="news"
            app:argType="com.example.android2.models.News" />
    </fragment>
    <fragment
        android:id="@+id/boardFragment"
        android:name="com.example.android2.ui.board.BoardFragment"
        android:label="fragment_board"
        tools:layout="@layout/fragment_board" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.android2.ui.auth.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
</navigation>