<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">


<ImageView
    android:layout_marginTop="20dp"
    android:id="@+id/imgProfile"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:contentDescription="TODO" />

    <TextView
        android:layout_margin="5dp"
        android:textColor="#F4EFEF"
        android:id="@+id/name"
        android:textAlignment="center"
       android:textSize="20sp"
        android:text="@string/george_a_romero"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/descrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/godfather_of_the_dead"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="#70645F"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:layout_editor_absoluteX="5dp" />


    <Button
        android:id="@+id/profile_btn"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/gradient"
        android:fontFamily="@font/rowdies_light"
        android:text="@string/follow"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@id/descrip"
        app:layout_constraintStart_toStartOf="@+id/descrip"
        app:layout_constraintTop_toBottomOf="@+id/descrip" />

    <TextView
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:textColor="#FDFBFA"
        android:layout_marginTop="16dp"
        android:layout_marginStart="80dp"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile_btn"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Movies"

        android:textColor="#70645F"
        app:layout_constraintStart_toStartOf="@id/number1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/number1"
        app:layout_constraintTop_toBottomOf="@+id/number1" />

    <TextView
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="13"
        android:textColor="#FDFBFA"
        android:layout_marginTop="16dp"
        android:layout_marginStart="180dp"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/number1"
        app:layout_constraintEnd_toStartOf="@+id/profile_btn"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Awards"

        android:textColor="#70645F"
        app:layout_constraintStart_toEndOf="@+id/number2"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/number2"
        app:layout_constraintBottom_toBottomOf="@+id/txt" />


    <TextView
        android:id="@+id/number3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1.5m"
        android:textColor="#FDFBFA"
        android:layout_marginTop="16dp"
        android:layout_marginStart="200dp"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/number2"
        app:layout_constraintEnd_toStartOf="@+id/number2"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Followers"
        android:textColor="#70645F"
        app:layout_constraintStart_toEndOf="@+id/number3"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/number3"
        app:layout_constraintBottom_toBottomOf="@+id/txt" />



    <TextView
        android:id="@+id/txtfilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FILMOGRAPHY"
        android:textColor="#FDFBFA"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/txt2"
        app:layout_constraintEnd_toStartOf="@+id/txt2"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        tools:layout_editor_absoluteX="5dp" />


    <ImageView
        android:id="@+id/img1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txtfilm"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="29dp"
        android:layout_height="110dp"/>

    <ImageView

        android:id="@+id/img2"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="29dp"
        app:layout_constraintTop_toBottomOf="@id/img1"
        android:layout_width="match_parent"
        android:layout_height="110dp"/>

    <TextView
        android:id="@+id/nameof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Night of the Living Dead"
        android:fontFamily="@font/rowdies_light"
        app:layout_constraintStart_toStartOf="@id/img1"
        app:layout_constraintTop_toTopOf="@+id/img1"
        app:layout_constraintBottom_toBottomOf="@+id/img1"
        android:textColor="#FDFBFA"
        android:layout_marginTop="16dp"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/year1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1968"
        app:layout_constraintStart_toStartOf="@id/nameof"
        app:layout_constraintTop_toBottomOf="@id/nameof"
        android:textColor="#FDFBFA"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/year2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1985"
        app:layout_constraintStart_toStartOf="@id/nameof2"
        app:layout_constraintTop_toBottomOf="@id/nameof2"
        android:textColor="#FDFBFA"
        android:textSize="17sp"
        />


    <TextView
        android:id="@+id/nameof2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Day of the Dead"
        app:layout_constraintStart_toStartOf="@id/img2"
        app:layout_constraintTop_toTopOf="@+id/img2"
        android:fontFamily="@font/rowdies_light"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        android:textColor="#FDFBFA"
        android:layout_marginTop="16dp"
        android:textSize="17sp"
        />








</androidx.constraintlayout.widget.ConstraintLayout>